fix: show timeline event colors in dark mode
dark mode overrides every border-color with an `!important` rule (evil).
This fix cancels this override on every element that has a `border*` inline style (ie. the events divs in the timeline). 

fixes #611

--- a/static/dark.css
+++ b/static/dark.css
@@ -170,7 +170,7 @@ hr {
   background-color: #282c32 !important;
 }
 
-#visualization *, svg,
+#visualization *:not([style*=border]), svg,
 .nav.nav-tabs,
 .btn-outline-secondary {
   border-color: #282c32 !important;
